--- a/deploy/charts/matrix/templates/riot-deployment.yaml
+++ b/deploy/charts/matrix/templates/riot-deployment.yaml
@@ -15,6 +15,8 @@ spec:
     metadata:
       {{- with .Values.podAnnotations }}
       annotations:
+        checksum/config: {{ include (print .Template.BasePath "/configuration.yaml") . | sha256sum }}
+        checksum/config-nginx: {{ include (print .Template.BasePath "/configuration-nginx.yaml") . | sha256sum }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
@@ -43,8 +45,15 @@ spec:
           - name: {{ .Values.riot.configSecretName }}
             mountPath: {{ .Values.riot.configmountpath }}
             subPath: config.json
+
+          - mountPath: /etc/nginx/conf.d
+            name: config-nginx
           
       volumes:
       - name: {{ .Values.riot.configSecretName }}
         configMap:
           name: {{ .Values.riot.configSecretName }}
+      
+      - name: config-nginx
+        configMap:
+          name: element-nginx-config
