--- a/deploy/charts/matrix/templates/riot-ingress.yaml
+++ b/deploy/charts/matrix/templates/riot-ingress.yaml
@@ -22,7 +22,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  ingressClassName: kong
+  ingressClassName: nginx
   tls:
     - hosts:
         - {{ .Values.networking.riot.ingress.host }}
