--- a/deploy/charts/matrix/templates/element-nginx-config.yaml
+++ b/deploy/charts/matrix/templates/element-nginx-config.yaml
@@ -7,7 +7,7 @@ data:
     server {
         listen       8080;
         listen  [::]:8080;
-        server_name  www.riot.test.savannahghi.org riot.test.savannahghi.org;
+        server_name  www.element.prohealth360.org element.prohealth360.org;
 
         root   /usr/share/nginx/html;
         index  index.html;
