--- a/deploy/charts/matrix/templates/riot-configmap.yaml
+++ b/deploy/charts/matrix/templates/riot-configmap.yaml
@@ -15,8 +15,8 @@ data:
         "default_country_code": "GB",
         "default_server_config": {
             "m.homeserver": {
-                "base_url": "https://matrix.test.savannahghi.org",
-                "server_name": "savannahghi.org"
+                "base_url": "https://matrix.prohealth360.org",
+                "server_name": "prohealth360.org"
             },
             "m.identity_server": {
                 "base_url": ""
