chore: update domain names

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -8,7 +8,7 @@ env:
   CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
   NAMESPACE: ${{ secrets.NAMESPACE }}
   SYNAPSE_DOMAIN: ${{ secrets.SYNAPSE_DOMAIN }}
-  RIOT_DOMAIN: ${{ secrets.RIOT_DOMAIN }}
+  ELEMENT_DOMAIN: ${{ secrets.ELEMENT_DOMAIN }}
   APP_NAME: ${{ secrets.APP_NAME }}
   DATABASE_INSTANCE_CONNECTION_NAME: ${{ secrets.DATABASE_INSTANCE_CONNECTION_NAME }}
 
