--- a/deploy/charts/matrix/templates/riot-configmap.yaml
+++ b/deploy/charts/matrix/templates/riot-configmap.yaml
@@ -16,7 +16,7 @@ data:
         "default_server_config": {
             "m.homeserver": {
                 "base_url": "https://matrix.test.savannahghi.org",
-                "server_name": "savannahghi.org"
+                "server_name": "prohealth360.org"
             },
             "m.identity_server": {
                 "base_url": ""
