--- a/deploy/charts/matrix/templates/element-configmap.yaml
+++ b/deploy/charts/matrix/templates/element-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.riot.configSecretName }}
+  name: {{ .Values.element.configSecretName }}
 data:
   config.json: |
     {
