chore: install nginx ingress to a namespace if it does not exist

--- a/deploy/charts/matrix/templates/element-ingress.yaml
+++ b/deploy/charts/matrix/templates/element-ingress.yaml
@@ -17,9 +17,10 @@ metadata:
   name: element
   labels:
     {{- include "matrix.labels" . | nindent 4 }}
+  {{- with .Values.ingress.annotations }}
   annotations:
-    kubernetes.io/tls-acme: "true"
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   ingressClassName: nginx
   tls:
