chore: pass data as environment variables
This will make it easier to deploy matrix to other projects

--- a/deploy/charts/matrix/templates/element-configmap.yaml
+++ b/deploy/charts/matrix/templates/element-configmap.yaml
@@ -15,7 +15,7 @@ data:
         "default_country_code": "GB",
         "default_server_config": {
             "m.homeserver": {
-                "base_url": "https://matrix.test.savannahghi.org",
+                "base_url": {{ .Values.service.homeserverBaseURL }},
                 "server_name": "prohealth360.org"
             },
             "m.identity_server": {
