--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -11,6 +11,13 @@ env:
   ELEMENT_DOMAIN: ${{ secrets.ELEMENT_DOMAIN }}
   APP_NAME: ${{ secrets.APP_NAME }}
   DATABASE_INSTANCE_CONNECTION_NAME: ${{ secrets.DATABASE_INSTANCE_CONNECTION_NAME }}
+  HOMESERVER_BASE_URL: ${{ secrets.HOMESERVER_BASE_URL }}
+  ELEMENT_BASE_URL: ${{ secrets.ELEMENT_BASE_URL }}
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_NAME: ${{ secrets.DB_NAME }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  DB_USER: ${{ secrets.DB_USER }}
+  SERVER_NAME: ${{ secrets.SERVER_NAME }}
 
 jobs:
   deploy_to_testing:
