--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -23,7 +23,7 @@ jobs:
   deploy_to_testing:
     name: Deploy testing matrix server to GKE
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/develop'}}
+    if: ${{ github.ref == 'refs/heads/element-labels'}}
     environment:
       name: test
 
