--- a/deploy/charts/matrix/templates/element/element-service.yaml
+++ b/deploy/charts/matrix/templates/element/element-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ .Values.element.serviceName }}
   labels:
-    {{- include "matrix.labels" . | nindent 4 }}
+    app: element
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "matrix.selectorLabels" . | nindent 4 }}
+    app: element
