chore: deploy matrix to sil testing gke server

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -4,15 +4,12 @@ on: [push]
 
 env:
   GKE_ZONE: ${{ secrets.GKE_ZONE }}
-  GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
   CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
   NAMESPACE: ${{ secrets.NAMESPACE }}
   SYNAPSE_DOMAIN: ${{ secrets.SYNAPSE_DOMAIN }}
   ELEMENT_DOMAIN: ${{ secrets.ELEMENT_DOMAIN }}
   APP_NAME: ${{ secrets.APP_NAME }}
   DATABASE_INSTANCE_CONNECTION_NAME: ${{ secrets.DATABASE_INSTANCE_CONNECTION_NAME }}
-  HOMESERVER_BASE_URL: ${{ secrets.HOMESERVER_BASE_URL }}
-  ELEMENT_BASE_URL: ${{ secrets.ELEMENT_BASE_URL }}
   DB_HOST: ${{ secrets.DB_HOST }}
   DB_NAME: ${{ secrets.DB_NAME }}
   DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -23,16 +20,19 @@ jobs:
   deploy_to_testing:
     name: Deploy testing matrix server to GKE
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/element-labels'}}
+    strategy:
+      matrix:
+        environment: [test, sil-testing]
+    if: ${{ github.ref == 'refs/heads/develop'}}
     environment:
-      name: test
+      name: ${{ matrix.environment }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - id: "auth"
-        uses: "google-github-actions/auth@v0"
+        uses: "google-github-actions/auth@v1"
         with:
           credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           project_id: ${{ secrets.GOOGLE_CLOUD_PROJECT }}
@@ -41,11 +41,10 @@ jobs:
         run: |
           curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
-      - uses: google-github-actions/get-gke-credentials@fb08709ba27618c31c09e014e1d8364b02e5042e
+      - uses: google-github-actions/get-gke-credentials@v1
         with:
           cluster_name: ${{ env.CLUSTER_NAME }}
           location: ${{ env.GKE_ZONE }}
-          credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
 
       - name: Deploy to Google Kubernetes engine
         shell: bash
@@ -54,16 +53,19 @@ jobs:
   deploy_to_prod:
     name: Deploy prod matrix server to GKE
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/main'}}
+    strategy:
+      matrix:
+        environment: [prod, sil-prod]
     environment:
-      name: prod
+      name: ${{ matrix.environment }}
+    if: ${{ github.ref == 'refs/heads/main'}}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - id: "auth"
-        uses: "google-github-actions/auth@v0"
+        uses: "google-github-actions/auth@v1"
         with:
           credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           project_id: ${{ secrets.GOOGLE_CLOUD_PROJECT }}
@@ -72,11 +74,10 @@ jobs:
         run: |
           curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
-      - uses: google-github-actions/get-gke-credentials@fb08709ba27618c31c09e014e1d8364b02e5042e
+      - uses: google-github-actions/get-gke-credentials@v1
         with:
           cluster_name: ${{ env.CLUSTER_NAME }}
           location: ${{ env.GKE_ZONE }}
-          credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
 
       - name: Deploy to Google Kubernetes engine
         shell: bash
