chore: update element ingress to kong from nginx

--- a/deploy/charts/matrix/templates/element/element-ingress.yaml
+++ b/deploy/charts/matrix/templates/element/element-ingress.yaml
@@ -22,7 +22,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  ingressClassName: nginx
+  ingressClassName: {{ .Values.ingress.className }}
   tls:
     - hosts:
         - {{ .Values.networking.element.ingress.host }}
